--- a/second_task/src/App.css
+++ b/second_task/src/App.css
@@ -1,38 +1,35 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header {
+  height: 80px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  background-color: rgb(212, 201, 201);
+  font-size: 26px;
+  font-weight: 700;
 }
 
-.App-link {
-  color: #61dafb;
+.container {
+  display: flex;
+  background: linear-gradient(180deg, rgb(216, 255, 183), rgb(220, 251, 255));
+  height: 700px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.w50 {
+  width: 50%;
+  padding: 5px;
+}
+
+.btn {
+  border-radius: 5px;
+  border: none;
+  padding: 6px;
+  font-weight: 550;
+  width: fit-content;
+  cursor: pointer;
+  background-color: aqua;
 }
