--- a/second_task/src/components/TransferSection/TransferSection.css
+++ b/second_task/src/components/TransferSection/TransferSection.css
@@ -1,8 +1,9 @@
 .inputSection {
     display: flex;
     gap: 10px;
-    align-items: center;
-    height: 30px;
+    flex-direction: column;
+    justify-content: center;
+    height: fit-content;
     font-weight: 600px;
 }
 
@@ -14,6 +15,10 @@
     border: none;
     border-radius: 5px;
     height: 25px;
+    font-size: 16px;
+    width:500px;
+    height: 150px;
+
 }
 
 .transferSection {
