--- a/second_task/src/components/TransferSection/TransferSection.css
+++ b/second_task/src/components/TransferSection/TransferSection.css
@@ -3,8 +3,11 @@
     gap: 10px;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
+    color: black;
+    font-weight: 700;
+    font-size: 30px;
     height: fit-content;
-    font-weight: 600px;
 }
 
 .label {
@@ -16,7 +19,7 @@
     border-radius: 5px;
     height: 25px;
     font-size: 16px;
-    width:500px;
+    width: 500px;
     height: 150px;
 
 }
@@ -25,12 +28,13 @@
     display: flex;
     align-items: center;
     flex-direction: column;
-    gap:20px
+    gap: 20px
 }
 
-.form{
-    width:100%;
-    display:flex;
+.form {
+    width: 100%;
+    display: flex;
     flex-direction: column;
-    gap:20px;
+    align-items: center;
+    gap: 20px;
 }
