Added transfer status display on UI

--- a/second_task/src/App.css
+++ b/second_task/src/App.css
@@ -21,6 +21,7 @@
   background: url("https://phonoteka.org/uploads/posts/2022-09/1664018701_1-phonoteka-org-p-oboi-s-perekhodom-tsveta-vkontakte-1.jpg");
   height: 680px;
   min-height: fit-content;
+  padding: 30px 0;
   color:rgb(204, 198, 198);
 }
 
