--- a/third_task/frontend/src/App.css
+++ b/third_task/frontend/src/App.css
@@ -18,11 +18,11 @@
 
 .container {
   display: flex;
-  background: url("https://phonoteka.org/uploads/posts/2022-09/1664018701_1-phonoteka-org-p-oboi-s-perekhodom-tsveta-vkontakte-1.jpg");
+  background: url("https://phonoteka.org/uploads/posts/2022-09/1664018701_1-phonoteka-org-p-oboi-s-perekhodom-tsveta-vkontakte-1.jpg") no-repeat center center fixed;
   height: 680px;
   min-height: fit-content;
   padding: 30px 0;
-  color:rgb(204, 198, 198);
+  color: rgb(204, 198, 198);
 }
 
 .w50 {
@@ -41,6 +41,12 @@
   background-color: rgb(255, 255, 255);
 }
 
-textarea{
+textarea {
   resize: none;
+}
+
+a {
+  color: white;
+  text-decoration: none;
+  cursor: pointer;
 }
